--- a/templates/register.html
+++ b/templates/register.html
@@ -5,13 +5,24 @@
 {% endblock %}
 
 {% block body %}
-    
+
     <div class="container">
         <div class ="row" >
             <div class="col-sm-4"></div>
                 <div class="col-sm-4">
+                    {% if flag==1 %}
+                        <div class="alert alert-success alert-dismissible">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <p> {{message}}</p>
+                        </div>
+                    {% elif flag==2 %}
+                        <div class="alert alert-success alert-dismissible">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <p> {{message}}</p>
+                        </div>                    
+                    {% endif %}
                     <p>Please fill in this form to create an account.</p>
-                    <form action="{{ url_for('register') }}" method="post">
+                    <form action="{{ url_for('register') }}" method="POST">
                         <div class = "form-group">
                             <label for="name"><b>UserName</b></label>
                             <input type="text" class="form-control" name="name" placeholder="Enter Your Name">
@@ -20,25 +31,25 @@
                             <label for="email"><b>Email</b></label>
                             <input type="email" class="form-control" name="email" placeholder="Enter your email">
                         </div>
-                        <div class = "form-group">
+                        <!--<div class = "form-group">
                             <label for="dob"><b>DOB</b></label>
                             <input type="date" class="form-control" name="dob" placeholder="Enter date of birth">
-                        </div>
+                        </div>>-->
                         <div class = "form-group">
                             <label for="psw"><b>Password</b></label>
                             <input type="password" class="form-control" name="psw" placeholder="Enter password">
                         </div>
-                        <div class = "form-group">
+                        <!--<div class = "form-group">
                             <label for="psw-repeat"><b>Repeat Password</b></label>
                             <input type="password" class="form-control" name="psw-repeat" placeholder="Re-enter password">
-                        </div>
+                        </div>-->
                         
                         <div class="form-group form-check">
                             <label class="form-check-label">
                               <input class="form-check-input" type="checkbox"> Remember me
                             </label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Register</button>
+                        <button type="submit" class="btn btn-info" name = "action" value="register">Register</button>
                         <!--<button type="submit" class="btn btn-primary">Login</button>-->
                         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
                     </form>
