--- a/templates/register.html
+++ b/templates/register.html
@@ -1,73 +1,160 @@
-{% extends "layout.html" %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My website</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', () =>  {
+                document.querySelector('#regs').disabled = true;
+                document.querySelector('#login').disabled = true;
+                //var countR = 0;
+                //var countL = 0;
+                document.querySelector('#username').onkeyup = () => {
+                    if (document.querySelector('#username').value.length > 0) {
+                        //countR++;
+                        //countL++;
+                        document.querySelector('#regs').disabled = false;
+                    }
+                    else {
+                         document.querySelector('#regs').disabled = true;
+                    }
+                };
+                document.querySelector('#password').onkeyup = () => {
+                    if (document.querySelector('#password').value.length > 0) {
+                        //countL++;
+                        //countR++;
+                        document.querySelector('#login').disabled = false;
+                    }
+                    else {
+                        document.querySelector('#login').disabled = true;
+                    }
+                };
+                // if (countR === 2){
+                //     document.querySelector('#regs').disabled = false;
+                // }
+                // if (countL === 2) {
+                //     document.querySelector('#login').disabled = false;
+                // }
+                document.querySelector('#regs').onclick = () => {
+                    if (ValidateEmail(document.querySelector('#username')) && CheckPassword(document.querySelector('#password'))) {
+                        return true;
+                    }
+                    else {
+                        return false;
+                    }
+                }
 
-{% block heading %}
-    <br>
-    Sign Up
-{% endblock %}
+                document.querySelector('#login').onclick = () => {
+                    if (ValidateEmail(document.querySelector('#username')) && CheckPassword(document.querySelector('#password'))) {
+                        return true;
+                    } 
+                    else {
+                        return false;
+                    }
+                }
 
-{% block body %}
+            });
 
-    <div class="container">
-        <div class ="row" >
-            <div class="col-sm-4"></div>
-                <div class="col-sm-4">
-                    {% if flag==1 %}
-                        <div class="alert alert-success alert-dismissible">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <p> {{message}}</p>
-                        </div>
-                    {% elif flag==2 %}
-                        <div class="alert alert-success alert-dismissible">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <p> {{message}}</p>
-                        </div>
-                    {% elif flag==3 %}
-                        <div class="alert alert-success alert-dismissible">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <p> {{message}}</p>
-                        </div>
-                    {% elif flag==4 %}
-                        <div class="alert alert-success alert-dismissible">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <p> {{message}}</p>
-                        </div>                 
-                    {% endif %}
-                    <p>Please fill in this form to create an account.</p>
-                    <form action="{{ url_for('register') }}" method="POST">
-                        <div class = "form-group">
-                            <label for="name"><b>UserName</b></label>
-                            <input type="text" class="form-control" name="name" placeholder="Enter Your Name">
-                        </div>
-                        <!--<div class = "form-group">
-                            <label for="email"><b>Email</b></label>
-                            <input type="email" class="form-control" name="email" placeholder="Enter your email">
-                        </div>-->
-                        <!--<div class = "form-group">
-                            <label for="dob"><b>DOB</b></label>
-                            <input type="date" class="form-control" name="dob" placeholder="Enter date of birth">
-                        </div>>-->
-                        <div class = "form-group">
-                            <label for="psw"><b>Password</b></label>
-                            <input type="password" class="form-control" name="psw" placeholder="Enter password">
-                        </div>
-                        <!--<div class = "form-group">
-                            <label for="psw-repeat"><b>Repeat Password</b></label>
-                            <input type="password" class="form-control" name="psw-repeat" placeholder="Re-enter password">
-                        </div>-->
-                        
-                        <div class="form-group form-check">
-                            <label class="form-check-label">
-                              <input class="form-check-input" type="checkbox"> Remember me
-                            </label>
-                        </div>
-                        <button type="submit" class="btn btn-info" name = "action" value="register">Register</button>
-                        <button type="submit" class="btn btn-info" name = "action" value="login" formaction="{{ url_for ('authentication') }}">Login</button>
-                        <!--<button type="submit" class="btn btn-primary">Login</button>-->
-                        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-                    </form>
-                </div>
-            <div class="col-sm-4"></div>
+                function ValidateEmail(inputText) {
+                    var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+                    if(inputText.value.match(mailformat)) {
+                        return true;
+                    }
+                    else {
+                        document.querySelector('#EmailErrorMsg').innerHTML = "Please enter a valid Email id."
+                        return false;
+                    }
+                }
+
+                function CheckPassword(inputtxt) { 
+                    var decimal=  /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{6,12}$/;
+                    if(inputtxt.value.match(decimal)) { 
+                        return true;
+                    }
+                    else {
+                        document.querySelector('#PswdErrorMsg').innerHTML = "please give a password atleast of 6 characters with 1LC,1UC 1digit,1symbol."
+                        return false; 
+                    } 
+                }
+
+        </script> 
+    </head>
+    <body>
+        <div class="container">
+            <div class ="row" >
+                <div class="col-sm-4"></div>
+                    <div class="col-sm-4">
+                        {% if flag==1 %}
+                            <div class="alert alert-success alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <p> {{message}}</p>
+                            </div>
+                        {% elif flag==2 %}
+                            <div class="alert alert-success alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <p> {{message}}</p>
+                            </div>
+                        {% elif flag==3 %}
+                            <div class="alert alert-success alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <p> {{message}}</p>
+                            </div>
+                        {% elif flag==4 %}
+                            <div class="alert alert-success alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <p> {{message}}</p>
+                            </div>                 
+                        {% endif %}
+                        <h1>Sign up</h1>
+                        <p>Please fill in this form to create an account.</p>
+                        <form action="{{ url_for('register') }}" method="POST">
+                            <div class = "form-group">
+                                <label for="name"><b>UserName</b></label>
+                                <input id = "username" type="text" class="form-control" name="name" placeholder="Enter Your Name">
+                            </div>
+                            <!--<div class = "form-group">
+                                <label for="email"><b>Email</b></label>
+                                <input type="email" class="form-control" name="email" placeholder="Enter your email">
+                            </div>-->
+                            <!--<div class = "form-group">
+                                <label for="dob"><b>DOB</b></label>
+                                <input type="date" class="form-control" name="dob" placeholder="Enter date of birth">
+                            </div>>-->
+                            <div class = "form-group">
+                                <label for="psw"><b>Password</b></label>
+                                <input id= "password" type="password" class="form-control" name="psw" placeholder="Enter password">
+                            </div>
+                            <div class="alert alert-success alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <p id="EmailErrorMsg"> </p>
+                            </div>
+                            <div class="alert alert-success alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <p id="PswdErrorMsg"> </p>
+                            </div>
+                            <!--<div class = "form-group">
+                                <label for="psw-repeat"><b>Repeat Password</b></label>
+                                <input type="password" class="form-control" name="psw-repeat" placeholder="Re-enter password">
+                            </div>-->
+                            
+                            <div class="form-group form-check">
+                                <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox"> Remember me
+                                </label>
+                            </div>
+                            <button id = "regs" type="submit" class="btn btn-info" name = "action" value="register">Register</button>
+                            <button id = "login" type="submit" class="btn btn-info" name = "action" value="login" formaction="{{ url_for ('authentication') }}">Login</button>
+                            <!--<button type="submit" class="btn btn-primary">Login</button>-->
+                            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+                        </form>
+                    </div>
+                <div class="col-sm-4"></div>
+            </div>
         </div>
-    </div>
-{% endblock %}
+    </body>
+</html>
     
